--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="blok-about d-flex">
                     <div class="author d-flex">
                         <div id="image">
-                            <img src="assets/img/author.jpeg" alt="Author"/>
+                            <img src="assets/img/author.jpg" alt="Author"/>
                         </div>
                         <div id="social" class="d-flex">
                             <ul>
